Refactor small amount of code

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   <form class="display-box" id="random-message-generator-box">
     <div>
       <span id="affirmation-select">
-        <input type="radio" name="random-message-type" id="affirmation" value="affirmation" class="message-type"
-          checked>
+        <input type="radio" name="random-message-type" id="affirmation" value="affirmation" class="message-type">
         <label for="affirmation">affirmation</label>
       </span>
-      <input type="radio" name="random-message-type" id="affirmation" value="mantra" class="message-type" checked>
+      <input type="radio" name="random-message-type" id="affirmation" value="mantra" class="message-type">
       <label for="mantra">mantra</label>
     </div>
     <div>
