Tried to fix message not displayiing - failed

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <form class="display-box" id="random-message-generator-box">
     <div>
       <span id="affirmation-select">
-        <input type="radio" name="random-message-type" id="affirmation" value="affirmation" class="message-type">
+        <input type="radio" name="random-message-type" id="affirmation" value="affirmation" class="message-type" checked>
         <label for="affirmation">affirmation</label>
       </span>
-      <input type="radio" name="random-message-type" id="affirmation" value="mantra" class="message-type">
+      <input type="radio" name="random-message-type" id="affirmation" value="mantra" class="message-type" checked>
       <label for="mantra">mantra</label>
     </div>
     <div>
@@ -43,7 +43,7 @@
   </form>
   <div class="display-box" id="display-message-box">
     <img class="meditation-pic" src="assets/meditate.svg">
-    <div class="message hidden"></div>
+    <p class="message hidden">message goes here</p>
   </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
